--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Haukai Restaurant TEST</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
