--- a/web/reservations.html
+++ b/web/reservations.html
@@ -20,6 +20,7 @@
       <a href="reservations.html" class="topnav">Reservation</a></li>
       <a href="contact.html" class="topnav">Contact</a></li>
       <a href="privacy.html" class="topnav">Privacy Policy</a></li>
+      <a href="roster.html" class="topnav">Staff Login</a></li>
     </nav>
 
     <main>
