--- a/web/private/roster.html
+++ b/web/private/roster.html
@@ -15,7 +15,7 @@
 
     <!-- Here is our nav menu that is used across all the pages of our website -->
     <nav class="topnav">
-      <a href="/web/index.html" class="topnav">Home</a></li>
+      <a href="web/index.html" class="topnav">Home</a></li>
       <a href="web/menu.html" class="topnav">Menu</a></li>
       <a href="web/reservations.html" class="topnav">Reservation</a></li>
       <a href="web/contact.html" class="topnav">Contact</a></li>
