--- a/web/private/roster.html
+++ b/web/private/roster.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Haukai Restaurant TEST</title>
-    <link rel="stylesheet" href="../stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
 
     <!-- Here is our main header that is used across all the pages of our website -->
     <header>
-        <img src="../images/logo.png" class="center">
+        <img src="/images/logo.png" class="center">
     </header>
 
     <!-- Here is our nav menu that is used across all the pages of our website -->
