--- a/web/private/roster.html
+++ b/web/private/roster.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Haukai Restaurant TEST</title>
+    <title>The Haukai Restaurant</title>
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
