--- a/web/index.html
+++ b/web/index.html
@@ -118,6 +118,9 @@
                 <p>Wednesday - Sunday: 5:00pm until 9:00pm</p>
                 <p>Holidays: 5:00pm until 8:00pm</p>
             </div>
-        </div>
+        </div>        
     </footer>
+            <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=8001475&style=0006&nbdigits=5&type=ip&initCount=0" class="center" title="Free Counter" Alt="web counter" border="0" /></a> 
 </html>
