--- a/web/private/roster.html
+++ b/web/private/roster.html
@@ -24,7 +24,7 @@
     </nav>
 
     <main>
-        <p>Only people who know the password should be able to see this page.</p>
+        <p>Only people who know the password should be able to see this page. This page displays information about staff contact details and roster  details.</p>
     </main>
 
 
