--- a/web/menu.html
+++ b/web/menu.html
@@ -161,7 +161,7 @@
       <a href="reservations.html" class="topnav">Reservation</a></li>
       <a href="contact.html" class="topnav">Contact</a></li>
       <a href="privacy.html" class="topnav">Privacy Policy</a></li>
-      <a href="roster.html" class="topnav">Staff Login</a></li>
+      <a href="private/roster.html" class="topnav">Staff Login</a></li>
     </nav>
 <div>
 
